# learning_machines_robobo

./: .gitattributes  .gitignore  Dockerfile  README.md  REAME.md  __init__.py  controller.py  learning_robobo_controller.py  start-docker.bat  start-docker.sh  test_actions.py
examples/: README.md
examples/coppelia_sim_tutorial/: README.md  requirements.txt
examples/coppelia_sim_tutorial/lua_scripts/: .stylua.toml
examples/coppelia_sim_tutorial/scripts/: start_coppelia_sim.ps1  start_coppelia_sim.zsh
examples/docker_tutorial/: README.md
examples/full_project_setup/: Dockerfile  README.md  quick_setup_linux.md  quick_setup_macos.md  quick_setup_windows.md  requirements.txt  run.bash  setup.bash
examples/full_project_setup/catkin_ws/src/coppelia_sim/: package.xml  setup.py
examples/full_project_setup/catkin_ws/src/coppelia_sim/src/coppelia_sim/: __init__.py  error.py  sim.py
examples/full_project_setup/catkin_ws/src/robobo_msgs/: CMakeLists.txt
examples/full_project_setup/catkin_ws/src/robobo_msgs/msg/: ModuleControlCommand.msg  OrientationEuler.msg  Wheels.msg
examples/full_project_setup/catkin_ws/src/robobo_msgs/src/robobo_msgs/: __init__.py
examples/full_project_setup/catkin_ws/src/robobo_msgs/srv/: SetEmotion.srv  SetLed.srv
examples/full_project_setup/scenes/: labyrinth_v3.ttt
examples/full_project_setup/scripts/: entrypoint.bash  run.ps1  run.sh  run_apple_sillicon.zsh  run_coppelia_sim.sh  setup.bash  start_coppelia_sim.sh  (+1 more)
examples/hardware_setup/: Dockerfile  README.md
examples/ros_basic_setup/: Dockerfile  README.md  requirements.txt
examples/ros_basic_setup/catkin_ws/src/data_files/: CMakeLists.txt  package.xml
examples/ros_basic_setup/catkin_ws/src/data_files/src/data_files/: constants.py  contants.py
examples/ros_basic_setup/catkin_ws/src/my_first_package/: CMakeLists.txt  package.xml
examples/ros_basic_setup/catkin_ws/src/my_first_package/scripts/: my_node.py  my_publisher.py  my_subscriber.py
examples/ros_basic_setup/catkin_ws/src/my_first_package/src/my_first_package/: __init__.py  message.py
examples/ros_tutorial_help/: Dockerfile  README.md
learning_machines_robobo-1/: Dockerfile  README.md  controller.py  start-docker.bat  start-docker.sh
learning_machines_robobo-1/src/: controller.py  ea_obstacle_avoidance.py  ea_validate.py  fitness.py  fittestseed111mixedFull.csv  logbookseed111.csv  output.csv  send_commands.py  send_commands_old.py
maintained/: build.py  requirements.txt
maintained/catkin_ws/src/learning_machines/: package.xml  setup.py
maintained/catkin_ws/src/learning_machines/scripts/: learning_robobo_controller.py
maintained/catkin_ws/src/learning_machines/src/learning_machines/: __init__.py  dance.py  test_actions.py
maintained/catkin_ws/src/learning_machines_prey/: CMakeLists.txt  package.xml
maintained/catkin_ws/src/learning_machines_prey/src/learning_machines_prey/: stoppable_thread.py
maintained/catkin_ws/src/robobo_interface/: package.xml
maintained/catkin_ws/src/robobo_interface/src/robobo_interface/: __init__.py  base.py  datatypes.py  hardware.py  simulation.py
maintained/dockerfiles/: coppelia.dockerfile  coppelia_sim.dockerfile  full.dockerfile  full_cached.dockerfile  hardware.dockerfile  ros_tutorial.dockerfile
maintained/requirements/: full_requirements.txt
maintained/scripts/: run.ps1  setup.bash  setup_ros_uri.bash  start_coppelia_docker.ps1  start_coppelia_docker.sh  start_coppelia_docker_apple_sillicon.zsh  start_coppelia_sim.ps1  start_coppelia_sim.sh
src/: Baseline.py  blob_detection.py  controller.py  ea_foraging.py  ea_obstacle_avoidance.py  ea_obstacle_avoidance_fitness_2.py  fitness.py  fittestseed111mixedFull.csv  irs_test.py  logbookseed111.csv  main_test.py  neat-experiment.py  neat_test.py  obstacle_avoidance.py  output.csv  read_irs.py  send_commands.py  test.py
src/robobo/: __init__.py  base.py  hardware.py  simulation.py  simulation_prey.py
src/robobo_msgs/: package.xml
src/vrep/: error.py
(+117 files in other folders)
