<?xml version="1.0"?>
<package format="2">
  <name>learning_machines_prey</name>
  <version>0.0.1</version>
  <description>A package providing a prey for the assignment</description>
  <maintainer email="your@email.here">Your Name</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>robobo_interface</exec_depend>
  <export>
  </export>
</package>
