<?xml version="1.0"?>
<package format="2">
  <name>coppelia_sim</name>
  <version>0.0.1</version>
  <description>A package providing a Coppelia Sim api</description>
  <maintainer email="your@email.here">Your Name</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <export>
  </export>
</package>
