<?xml version="1.0"?>
<package format="2">
  <name>my_first_package</name>
  <version>0.0.1</version>
  <description>The first package I ever wrote</description>
  <maintainer email="your@email.here">Your Name</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>data_files</exec_depend>
  <export>
  </export>
</package>
